--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: base-files
 Section: admin
 Priority: required
-Maintainer: Santiago Vila <sanvila@debian.org>
+Maintainer: Franco (nextime) Lanza <nextime@devuan.org>
 Standards-Version: 3.9.5
 
 Package: base-files
@@ -13,8 +13,8 @@ Priority: required
 Replaces: base, miscutils, dpkg (<= 1.15.0)
 Breaks: initscripts (<< 2.88dsf-13.3), sendfile (<< 2.1b.20080616-5.2~)
 Multi-Arch: foreign
-Description: Debian base system miscellaneous files
+Description: Devuan base system miscellaneous files
  This package contains the basic filesystem hierarchy of a Debian system, and
  several important miscellaneous files, such as /etc/debian_version,
- /etc/host.conf, /etc/issue, /etc/motd, /etc/profile, and others,
- and the text of several common licenses in use on Debian systems.
+ /etc/devuan_version, /etc/host.conf, /etc/issue, /etc/motd, /etc/profile, 
+ and others, and the text of several common licenses in use on Debian systems.
