--- a/debian/copyright.in
+++ b/debian/copyright.in
@@ -1,6 +1,6 @@
-This is the Debian #OSNAME# prepackaged version of the Debian Base System
+This is the Devuan #OSNAME# prepackaged version of the Devuan Base System
 Miscellaneous files. These files were written by Ian Murdock
-<imurdock@debian.org> and Bruce Perens <bruce@pixar.com>.
+<imurdock@debian.org> and Bruce Perens <bruce@pixar.com> from Debian.
 
 This package was first put together by Bruce Perens <Bruce@Pixar.com>,
 from his own sources.
@@ -24,5 +24,5 @@ but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
-On Debian #OSNAME# systems, the complete text of the GNU General
+On Devuan #OSNAME# systems, the complete text of the GNU General
 Public License can be found in `/usr/share/common-licenses/GPL'.
